--- a/app/src/main/res/layout/activity_pallete.xml
+++ b/app/src/main/res/layout/activity_pallete.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <HorizontalScrollView
+    <sergeylysyi.scrollpalette.SwitchingScrollView
         android:id="@+id/horizontalScrollView"
         android:layout_width="0dp"
         android:layout_height="100dp"
@@ -14,7 +16,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp">
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -23,110 +27,110 @@
             android:background="@drawable/colormap"
             android:orientation="horizontal">
 
-            <Button
+            <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-            <Button
+            <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <Button
+            <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <Button
+            <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <Button
+            <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <Button
+            <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <Button
+            <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <Button
+            <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <Button
+            <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <Button
+            <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <Button
+            <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <Button
+            <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <Button
+            <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <Button
+            <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <Button
+            <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <Button
+            <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
         </LinearLayout>
-    </HorizontalScrollView>
+    </sergeylysyi.scrollpalette.SwitchingScrollView>
 
     <ImageView
         android:id="@+id/currentColor"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
+        app:srcCompat="@color/colorPrimary"
+        app:layout_constraintRight_toLeftOf="@+id/textViewHSV"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/textViewRGB"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.511"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        app:srcCompat="@color/colorPrimary" />
+        android:layout_marginTop="8dp" />
 
     <TextView
         android:id="@+id/textViewRGB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         android:text="Red:ff\nGreen:ff\nBlue:ff"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/currentColor"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintTop_toTopOf="@+id/currentColor"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/currentColor"
+        android:layout_marginBottom="8dp" />
 
     <TextView
         android:id="@+id/textViewHSV"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         android:text="Hue:360.00\nSaturation:1.00\nValue:1.00"
-        app:layout_constraintLeft_toRightOf="@+id/currentColor"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/currentColor"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="@+id/currentColor"
+        android:layout_marginTop="8dp" />
 
 </android.support.constraint.ConstraintLayout>
