--- a/app/src/main/res/layout/activity_pallete.xml
+++ b/app/src/main/res/layout/activity_pallete.xml
@@ -109,6 +109,20 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp" />
 
+    <ImageView
+        android:id="@+id/dynamicColor"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:srcCompat="@color/colorPrimary"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
+
     <TextView
         android:id="@+id/textViewRGB"
         android:layout_width="wrap_content"
