--- a/app/src/main/res/layout-land/activity_pallete.xml
+++ b/app/src/main/res/layout-land/activity_pallete.xml
@@ -9,17 +9,16 @@
     <sergeylysyi.scrollpalette.SwitchingScrollView
         android:id="@+id/horizontalScrollView"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintVertical_bias="0.5">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/confirmButton"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -30,7 +29,7 @@
 
             <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
             <sergeylysyi.scrollpalette.ColorButton
                 android:layout_width="match_parent"
@@ -98,15 +97,19 @@
     <ImageView
         android:id="@+id/currentColor"
         android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:srcCompat="@color/colorPrimary"
-        app:layout_constraintRight_toLeftOf="@+id/textViewHSV"
-        android:layout_marginRight="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/textViewRGB"
+        android:layout_height="66dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintLeft_toRightOf="@+id/textViewRGB"
+        app:layout_constraintRight_toLeftOf="@+id/textViewHSV"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        app:srcCompat="@color/colorPrimary"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView" />
 
     <ImageView
         android:id="@+id/dynamicColor"
@@ -120,7 +123,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <TextView
         android:id="@+id/textViewRGB"
@@ -132,7 +137,8 @@
         app:layout_constraintTop_toTopOf="@+id/currentColor"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/currentColor"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp" />
 
     <TextView
         android:id="@+id/textViewHSV"
@@ -144,20 +150,18 @@
         app:layout_constraintBottom_toBottomOf="@+id/currentColor"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="@+id/currentColor"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp" />
 
     <Button
         android:id="@+id/confirmButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/confirm_button"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/currentColor"
+        android:layout_height="80dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView" />
+        android:layout_marginRight="0dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/confirm_button"
+        app:layout_constraintBottom_toTopOf="@+id/dynamicColor"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
